[package]
name = "tree-precompile-1x"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/gballet/tree-precompiles-eth1"
authors = ["Guillaume Ballet <gballet@gmail.com>"]
edition = "2018"
publish = false
description = "MPT management precompile in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multiproof-rs = {path= "../multiproof-rs"}
rlp = "0.4.2"

[lib]
crate-type = ["cdylib"]
