[package]
name = "precompile-1x-tree-update"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/gballet/tree-precompiles-eth1"
authors = ["Guillaume Ballet <gballet@gmail.com>"]
edition = "2018"
publish = false
description = "MPT root update precompile in Rust"

[dependencies]
multiproof-rs = "^0.1.3"
rlp = "0.4.4"
jupiter-account = "^0.1.1"

[lib]
crate-type = ["cdylib"]
